changes to max pages

--- a/config.ipynb
+++ b/config.ipynb
@@ -245,11 +245,11 @@
     "    \"databricks_connection\",\n",
     "    \"databricks_credential\",\n",
     "    \"databricks_sql_alerts\",\n",
-    "    \"databricks_dashboard\",\n",
     "    \"databricks_alert\",\n",
     "    \"databricks_workspace_file\",\n",
     "    \"databricks_dbfs_file\",\n",
     "    \"databricks_cluster\", # Takes a lot of time\n",
+    "    \"databricks_dashboard\", # Takes a lot of time\n",
     "]\n",
     "\n",
     "# Global pagination controls (can be overridden per endpoint)\n",
@@ -260,7 +260,7 @@
     "# None = use endpoint's default setting\n",
     "ENDPOINT_PAGINATION_OVERRIDES = {\n",
     "    # --- Compute ---\n",
-    "    \"databricks_cluster\": True,             # Enable pagination (can be many clusters)\n",
+    "    \"databricks_cluster\": True,            # Enable pagination (can be many clusters)\n",
     "    \"databricks_cluster_policy\": True,      # Enable pagination (can be many policies)\n",
     "    \"databricks_instance_pool\": None,       # No pagination available\n",
     "    \n",
