--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -130,7 +130,7 @@
     "        \"list_key\": \"instance_pools\",\n",
     "        \"paginate\": False,\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "\n",
     "    # --- Workspace / Files ---\n",
@@ -140,7 +140,7 @@
     "        \"list_key\": \"objects\",\n",
     "        \"paginate\": False,  # Usually too large and not needed in full\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_dbfs_file\": {\n",
     "        \"url\": \"/api/2.0/dbfs/list\",\n",
@@ -148,21 +148,21 @@
     "        \"list_key\": \"files\",\n",
     "        \"paginate\": False,  # Usually too large and not needed in full\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_workspace_conf\": {\n",
     "        \"url\": \"/api/2.0/workspace-conf\",\n",
     "        \"list_key\": None,  # object, not list\n",
     "        \"paginate\": False,\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_global_init_script\": {\n",
     "        \"url\": \"/api/2.0/global-init-scripts\",\n",
     "        \"list_key\": \"scripts\",\n",
     "        \"paginate\": False,\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "\n",
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
@@ -182,7 +182,7 @@
     "        \"list_key\": \"statuses\",\n",
     "        \"paginate\": False,\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_alert\": {  # SQL Alerts (legacy alias)\n",
     "        \"url\": \"/api/2.0/sql/alerts\",\n",
@@ -193,7 +193,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_dashboard\": {  # Lakeview dashboards\n",
     "        \"url\": \"/api/2.0/lakeview/dashboards\",\n",
@@ -204,7 +204,7 @@
     "        \"page_param\": \"page_token\",      # Request param\n",
     "        \"token_key\": \"next_page_token\",  # Response field per API docs\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 100 # 0 = unlimited\n",
     "    },\n",
     "\n",
     "    # --- MLflow / Serving ---\n",
@@ -217,7 +217,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_experiment\": {\n",
     "        \"url\": \"/api/2.0/mlflow/experiments/list\",\n",
@@ -228,7 +228,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_model_serving\": {\n",
     "        \"url\": \"/api/2.0/serving-endpoints\",\n",
@@ -239,7 +239,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "\n",
     "    # --- DBSQL ---\n",
@@ -252,7 +252,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_sql_alerts\": {     # alias for alerts\n",
     "        \"url\": \"/api/2.0/sql/alerts\",\n",
@@ -263,7 +263,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "\n",
     "    # --- UC / Metastore ---\n",
@@ -272,7 +272,7 @@
     "        \"list_key\": \"catalogs\",\n",
     "        \"paginate\": False,\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_external_location\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/external-locations\",\n",
@@ -283,7 +283,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_storage_credential\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/storage-credentials\",\n",
@@ -294,7 +294,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_share\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/shares\",\n",
@@ -305,7 +305,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_recipient\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/recipients\",\n",
@@ -316,7 +316,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "\n",
     "    # --- Repos / Identity / Connections ---\n",
@@ -336,7 +336,7 @@
     "        \"list_key\": \"scopes\",\n",
     "        \"paginate\": False,\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_group\": {\n",
     "        \"url\": \"/api/2.0/groups/list\",\n",
@@ -347,7 +347,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_connection\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/connections\",\n",
@@ -365,7 +365,7 @@
     "        \"list_key\": \"instance_profiles\",\n",
     "        \"paginate\": False,\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "\n",
     "    # --- Vector Search ---\n",
@@ -378,7 +378,7 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
     "    # Indexes require endpoint_name; collected after endpoints\n",
     "    \"databricks_vector_search_index\": {\n",
@@ -392,9 +392,9 @@
     "        \"requires_parent\": \"databricks_vector_search_endpoint\",\n",
     "        \"parent_param\": \"endpoint_name\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0\n",
+    "        \"max_pages\": 0 # 0 = unlimited\n",
     "    },\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -444,7 +444,7 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
-    "pythonIndentUnit": 4
+    "pythonIndentUnit": 2
    },
    "notebookName": "endpoints",
    "widgets": {}
