Remove redundant JOBS_PAGE_SIZE and DBSQL_WH_PAGE_SIZE variables
- Removed JOBS_PAGE_SIZE and DBSQL_WH_PAGE_SIZE from config.ipynb
- Updated endpoints.ipynb to use PAGE_SIZE_DEFAULT directly
- Updated README.md documentation to reflect simpler configuration
- Single source of truth: PAGE_SIZE_DEFAULT for all pagination

--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -171,7 +171,7 @@
     "        \"list_key\": \"jobs\",\n",
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"limit\",\n",
-    "        \"limit\": JOBS_PAGE_SIZE,      # API cap = 100\n",
+    "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
@@ -248,11 +248,11 @@
     "        \"list_key\": \"warehouses\",\n",
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"page_size\",\n",
-    "        \"limit\": DBSQL_WH_PAGE_SIZE,\n",
+    "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"enabled\": True,\n",
-    "        \"max_pages\": 0 # 0 = unlimited\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_sql_alerts\": {     # alias for alerts\n",
     "        \"url\": \"/api/2.0/sql/alerts\",\n",
