--- a/config.ipynb
+++ b/config.ipynb
@@ -243,7 +243,6 @@
     "    \"databricks_connection\",\n",
     "    \"databricks_credential\",\n",
     "    \"databricks_sql_alerts\",\n",
-    "    \"databricks_alert\",\n",
     "    \"databricks_workspace_file\",\n",
     "    \"databricks_dbfs_file\",\n",
     "    \"databricks_cluster\", # Takes a lot of time\n",
@@ -271,7 +270,6 @@
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
     "    \"databricks_job\": True,                # Enable pagination (can be many jobs)\n",
     "    \"databricks_pipeline\": None,           # No pagination available\n",
-    "    \"databricks_alert\": True,              # Enable pagination (can be many alerts)\n",
     "    \"databricks_dashboard\": True,          # Disable for faster collection (first page usually sufficient)\n",
     "    \n",
     "    # --- MLflow / Serving ---\n",
@@ -281,7 +279,7 @@
     "    \n",
     "    # --- DBSQL ---\n",
     "    \"databricks_sql_endpoint\": True,       # Enable pagination (can be many warehouses)\n",
-    "    \"databricks_sql_alerts\": True,         # Enable pagination (alias to databricks_alert)\n",
+    "    \"databricks_sql_alerts\": True,         # Enable pagination (can be many SQL alerts)\n",
     "    \n",
     "    # --- UC / Metastore ---\n",
     "    \"databricks_catalog\": None,             # No pagination available (usually small list)\n",
