Add periodic batch writing for Unity Catalog tables to prevent OOM
- Add UC_TABLE_BATCH_SIZE config (default: 5000 tables per batch)
- Modify enumerate_unity_catalog to support write_callback for batch writing
- Update main.ipynb to use batch writing callback for UC tables
- Tables are now written in batches during enumeration instead of all at once
- Prevents Spark driver OOM when scanning large Unity Catalogs with thousands of tables

--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -180,14 +180,21 @@
     "        allowlist: List[str] = None,\n",
     "        catalog_limit: int = 0,\n",
     "        schema_limit_per_catalog: int = 0,\n",
-    "        max_workers: int = 20\n",
+    "        max_workers: int = 20,\n",
+    "        write_callback = None,\n",
+    "        batch_size: int = 5000\n",
     "    ) -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
     "        \"\"\"\n",
     "        Enumerate Unity Catalog with configurable limits and threading.\n",
     "        \n",
+    "        Args:\n",
+    "            write_callback: Optional function(table_type, records) to write batches periodically\n",
+    "            batch_size: Write every N tables (only used if write_callback is provided)\n",
+    "        \n",
     "        Returns tuple of (counts, raw_data):\n",
     "        - counts: dict with uc_catalogs, uc_schemas, uc_tables, managed_tables, external_tables\n",
     "        - raw_data: dict with \"schemas\" and \"tables\" lists containing full metadata\n",
+    "                    (empty if write_callback is used for tables)\n",
     "        \"\"\"\n",
     "        banner(\"3/4 Unity Catalog Enumeration\")\n",
     "        out = {\n",
@@ -224,6 +231,7 @@
     "        total_schemas = total_tables = managed = external = 0\n",
     "        futures = []\n",
     "        queued_catalogs = 0\n",
+    "        table_buffer = []  # Buffer for batch writing\n",
     "\n",
     "        with ThreadPoolExecutor(max_workers=max_workers) as ex:\n",
     "            # Queue up all schema-table enumeration tasks\n",
@@ -252,8 +260,8 @@
     "                table_data = f.result()\n",
     "                \n",
     "                if table_data:\n",
-    "                    # Collect table data\n",
-    "                    raw_data[\"tables\"].extend(table_data)\n",
+    "                    # Add to buffer instead of directly to raw_data\n",
+    "                    table_buffer.extend(table_data)\n",
     "                    \n",
     "                    # Count stats\n",
     "                    for tbl in table_data:\n",
@@ -262,9 +270,21 @@
     "                            managed += 1\n",
     "                        elif tbl.get(\"table_type\") == \"EXTERNAL\":\n",
     "                            external += 1\n",
+    "                    \n",
+    "                    # Write batch when buffer reaches threshold\n",
+    "                    if len(table_buffer) >= batch_size and write_callback:\n",
+    "                        print(f\"[UC] Writing batch of {len(table_buffer)} tables to Delta (total so far: {total_tables})...\")\n",
+    "                        write_callback(\"databricks_table\", table_buffer)\n",
+    "                        table_buffer = []  # Clear buffer after write\n",
     "                \n",
     "                if i % 200 == 0:\n",
     "                    print(f\"[UC] Heartbeat: processed {i} schema-table batches (tables so far={total_tables})\")\n",
+    "            \n",
+    "            # Write remaining tables in buffer\n",
+    "            if table_buffer and write_callback:\n",
+    "                print(f\"[UC] Writing final batch of {len(table_buffer)} tables to Delta...\")\n",
+    "                write_callback(\"databricks_table\", table_buffer)\n",
+    "                table_buffer = []\n",
     "\n",
     "        out[\"uc_schemas\"] = total_schemas\n",
     "        out[\"uc_tables\"] = total_tables\n",
@@ -281,8 +301,15 @@
     "            scope.append(f\"schema_limit={schema_limit_per_catalog}\")\n",
     "        desc = \", \".join(scope) if scope else \"full-scan\"\n",
     "        \n",
+    "        # For backward compatibility, only return table data if no callback was used\n",
+    "        if not write_callback and table_buffer:\n",
+    "            raw_data[\"tables\"] = table_buffer\n",
+    "        \n",
     "        print(f\"[UC] Done ({desc}) → {out['uc_catalogs']} catalogs, {out['uc_schemas']} schemas, {out['uc_tables']} tables\")\n",
-    "        print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, {len(raw_data['tables'])} table records\")\n",
+    "        if write_callback:\n",
+    "            print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, tables written in batches\")\n",
+    "        else:\n",
+    "            print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, {len(raw_data['tables'])} table records\")\n",
     "        return out, raw_data\n"
    ]
   },
@@ -309,10 +336,16 @@
     "    allowlist: List[str] = None,\n",
     "    catalog_limit: int = UC_CATALOG_LIMIT,\n",
     "    schema_limit_per_catalog: int = UC_SCHEMA_LIMIT_PER_CATALOG,\n",
-    "    max_workers: int = UC_MAX_WORKERS\n",
+    "    max_workers: int = UC_MAX_WORKERS,\n",
+    "    write_callback = None,\n",
+    "    batch_size: int = 5000\n",
     ") -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
     "    \"\"\"\n",
     "    Wrapper for Unity Catalog enumeration.\n",
+    "    \n",
+    "    Args:\n",
+    "        write_callback: Optional function(table_type, records) to write batches periodically\n",
+    "        batch_size: Write every N tables (only used if write_callback is provided)\n",
     "    \n",
     "    Returns tuple of (counts, raw_data):\n",
     "    - counts: dict with catalog/schema/table counts\n",
@@ -324,7 +357,9 @@
     "        allowlist=allowlist or UC_CATALOG_ALLOWLIST,\n",
     "        catalog_limit=catalog_limit,\n",
     "        schema_limit_per_catalog=schema_limit_per_catalog,\n",
-    "        max_workers=max_workers\n",
+    "        max_workers=max_workers,\n",
+    "        write_callback=write_callback,\n",
+    "        batch_size=batch_size\n",
     "    )"
    ]
   }
