Removing unused code.

--- a/config.ipynb
+++ b/config.ipynb
@@ -202,7 +202,7 @@
     "# ====================================================================================\n",
     "# ---- UC scan controls (fast unit tests) ----\n",
     "UC_ENABLE = True\n",
-    "UC_CATALOG_ALLOWLIST: List[str] = [\"hive_metastore\"]  # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
+    "UC_CATALOG_ALLOWLIST: List[str] = []  # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
     "UC_CATALOG_LIMIT = 0                  # 0 = all; N = first N catalogs\n",
     "UC_SCHEMA_LIMIT_PER_CATALOG = 0       # 0 = all; N = first N schemas per catalog\n",
     "UC_MAX_WORKERS = 20\n",
