--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -59,7 +59,7 @@
     "        print(msg)\n",
     "\n",
     "def banner(txt: str):\n",
-    "    print(\"\\n\" + \"=\"*22 + f\" {txt} \" + \"=\"*22 + \"\\n\")\n"
+    "    print(\"\\n\" + \"=\"*22 + f\" {txt} \" + \"=\"*22 + \"\\n\")"
    ]
   },
   {
