--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -394,9 +394,9 @@
      "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b51d7527-6f9f-49d3-aaab-7528b41accae",
-     "showTitle": false,
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "Get Endpoint Config"
     }
    },
    "outputs": [],
