--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -61,20 +61,20 @@
     "def should_paginate(endpoint_key: str, endpoint_config: Dict[str, Any]) -> bool:\n",
     "    \"\"\"\n",
     "    Determine if an endpoint should use pagination based on:\n",
-    "    1. Explicit override in ENDPOINT_PAGINATION_OVERRIDES (if not None)\n",
-    "    2. Global default (if explicitly False, override all)\n",
+    "    1. Global default (if explicitly False, override EVERYTHING - absolute priority)\n",
+    "    2. Explicit override in ENDPOINT_PAGINATION_OVERRIDES (if not None)\n",
     "    3. Endpoint's built-in paginate setting\n",
     "    4. Global default (fallback)\n",
     "    \"\"\"\n",
-    "    # Check for explicit override first (but not if it's None)\n",
+    "    # If global default is explicitly False, respect it (ABSOLUTE OVERRIDE - master kill switch)\n",
+    "    if not ENABLE_PAGINATION_BY_DEFAULT:\n",
+    "        return False\n",
+    "    \n",
+    "    # Check for explicit override (but not if it's None)\n",
     "    if endpoint_key in ENDPOINT_PAGINATION_OVERRIDES:\n",
     "        override = ENDPOINT_PAGINATION_OVERRIDES[endpoint_key]\n",
     "        if override is not None:\n",
     "            return override\n",
-    "    \n",
-    "    # If global default is explicitly False, respect it (override endpoint settings)\n",
-    "    if not ENABLE_PAGINATION_BY_DEFAULT:\n",
-    "        return False\n",
     "    \n",
     "    # Check endpoint's built-in setting\n",
     "    if \"paginate\" in endpoint_config:\n",
