--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -257,7 +257,20 @@
     "        if not endpoints_data:\n",
     "            return all_indexes\n",
     "        \n",
+    "        # Check if pagination is enabled for vector search indexes\n",
+    "        vs_index_config = get_endpoint_config(\"databricks_vector_search_index\")\n",
+    "        should_paginate_indexes = vs_index_config.get(\"paginate\", True)\n",
+    "        max_pages = vs_index_config.get(\"max_pages\", 0)\n",
+    "        \n",
+    "        # Apply global override if set\n",
+    "        if GLOBAL_MAX_PAGES > 0:\n",
+    "            max_pages = GLOBAL_MAX_PAGES\n",
+    "        \n",
     "        print(f\"\\n[VS] Fetching indexes for {len(endpoints_data)} vector search endpoints...\")\n",
+    "        if not should_paginate_indexes:\n",
+    "            print(f\"[VS] Pagination disabled - fetching first page only per endpoint\")\n",
+    "        elif max_pages > 0:\n",
+    "            print(f\"[VS] Max pages limit: {max_pages} per endpoint\")\n",
     "        \n",
     "        for idx, endpoint in enumerate(endpoints_data, 1):\n",
     "            endpoint_name = endpoint.get(\"name\")\n",
@@ -272,6 +285,13 @@
     "                page_num = 0\n",
     "                while True:\n",
     "                    page_num += 1\n",
+    "                    \n",
+    "                    # Check max_pages limit\n",
+    "                    if max_pages > 0 and page_num > max_pages:\n",
+    "                        if VERBOSE_LOG:\n",
+    "                            print(f\"      [VS] {endpoint_name}: Reached max_pages limit ({max_pages})\")\n",
+    "                        break\n",
+    "                    \n",
     "                    status, data = await self._safe_get(session, url, params=params)\n",
     "                    \n",
     "                    if status != 200 or not isinstance(data, dict):\n",
@@ -283,6 +303,10 @@
     "                        for idx_item in indexes:\n",
     "                            idx_item[\"_endpoint_name\"] = endpoint_name\n",
     "                        all_indexes.extend(indexes)\n",
+    "                    \n",
+    "                    # If pagination is disabled, stop after first page\n",
+    "                    if not should_paginate_indexes:\n",
+    "                        break\n",
     "                    \n",
     "                    next_token = data.get(\"next_page_token\")\n",
     "                    if next_token:\n",
