--- a/config.ipynb
+++ b/config.ipynb
@@ -300,7 +300,7 @@
     "    \n",
     "    # --- Vector Search ---\n",
     "    \"databricks_vector_search_endpoint\": True,  # Enable pagination (can be many endpoints)\n",
-    "    \"databricks_vector_search_index\": None,     # Skipped by default (requires endpoint_name)\n",
+    "    \"databricks_vector_search_index\": True,     # Enable pagination (needs vector search endpoint)\n",
     "}"
    ]
   }
