Add Spark session keep-alive to prevent timeout during long UC enumeration
- Added keep_spark_alive() background thread function
- Thread pings Spark every 60 seconds during UC enumeration
- Prevents INACTIVITY_TIMEOUT errors on large workspaces (3900+ catalogs)
- Updated enumerate_unity_catalog() to start/stop keep-alive thread
- Updated enumerate_uc() wrapper to accept spark parameter
- Updated main.ipynb to pass spark to enumerate_uc()
- Added SPARK_KEEP_ALIVE_INTERVAL config (default: 60s)
- Thread automatically stops when enumeration completes (try-finally)
- Solves session timeout issue during multi-hour scans

--- a/main.ipynb
+++ b/main.ipynb
@@ -265,7 +265,8 @@
     "            schema_limit_per_catalog=UC_SCHEMA_LIMIT_PER_CATALOG,\n",
     "            max_workers=UC_MAX_WORKERS,\n",
     "            write_callback=write_uc_batch if ENABLE_STREAMING_WRITES else None,\n",
-    "            batch_size=UC_TABLE_BATCH_SIZE\n",
+    "            batch_size=UC_TABLE_BATCH_SIZE,\n",
+    "            spark=spark\n",
     "        )\n",
     "        \n",
     "        # Write UC schema data (tables are already written in batches if streaming)\n",
