--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -35,6 +35,7 @@
    "source": [
     "import time\n",
     "import requests\n",
+    "import threading\n",
     "from typing import Dict, List, Tuple\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed"
    ]
@@ -59,7 +60,27 @@
     "        print(msg)\n",
     "\n",
     "def banner(txt: str):\n",
-    "    print(\"\\n\" + \"=\"*22 + f\" {txt} \" + \"=\"*22 + \"\\n\")"
+    "    print(\"\\n\" + \"=\"*22 + f\" {txt} \" + \"=\"*22 + \"\\n\")\n",
+    "\n",
+    "def keep_spark_alive(spark, stop_event, interval=60):\n",
+    "    \"\"\"\n",
+    "    Keep Spark session alive by running simple queries periodically.\n",
+    "    Run this in a background thread during long operations to prevent session timeout.\n",
+    "    \n",
+    "    Args:\n",
+    "        spark: SparkSession instance\n",
+    "        stop_event: threading.Event to signal when to stop\n",
+    "        interval: Seconds between keep-alive pings (default: 60)\n",
+    "    \"\"\"\n",
+    "    while not stop_event.is_set():\n",
+    "        try:\n",
+    "            # Simple operation to keep session alive\n",
+    "            spark.sql(\"SELECT 1\").collect()\n",
+    "            time.sleep(interval)\n",
+    "        except Exception as e:\n",
+    "            if VERBOSE_LOG:\n",
+    "                print(f\"[KEEP-ALIVE] Warning: {e}\")\n",
+    "            time.sleep(interval)"
    ]
   },
   {
@@ -182,7 +203,8 @@
     "        schema_limit_per_catalog: int = 0,\n",
     "        max_workers: int = 20,\n",
     "        write_callback = None,\n",
-    "        batch_size: int = 5000\n",
+    "        batch_size: int = 5000,\n",
+    "        spark = None\n",
     "    ) -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
     "        \"\"\"\n",
     "        Enumerate Unity Catalog with configurable limits and threading.\n",
@@ -215,102 +237,123 @@
     "            print(\"[UC] Skipped (UC_ENABLE=False).\")\n",
     "            return out, raw_data\n",
     "\n",
-    "        allowlist = allowlist or []\n",
+    "        # Start keep-alive thread to prevent Spark session timeout\n",
+    "        stop_keep_alive = threading.Event()\n",
+    "        keep_alive_thread = None\n",
     "        \n",
-    "        # Get catalogs to scan\n",
-    "        catalogs = self.get_catalogs(allowlist, catalog_limit)\n",
-    "        if not catalogs:\n",
-    "            print(\"[UC] No catalogs found or accessible.\")\n",
+    "        if spark:\n",
+    "            keep_alive_thread = threading.Thread(\n",
+    "                target=keep_spark_alive,\n",
+    "                args=(spark, stop_keep_alive, 60),\n",
+    "                daemon=True\n",
+    "            )\n",
+    "            keep_alive_thread.start()\n",
+    "            print(\"[UC] Spark keep-alive thread started (60s interval)\")\n",
+    "\n",
+    "        try:\n",
+    "            allowlist = allowlist or []\n",
+    "            \n",
+    "            # Get catalogs to scan\n",
+    "            catalogs = self.get_catalogs(allowlist, catalog_limit)\n",
+    "            if not catalogs:\n",
+    "                print(\"[UC] No catalogs found or accessible.\")\n",
+    "                return out, raw_data\n",
+    "                \n",
+    "            out[\"uc_catalogs\"] = len(catalogs)\n",
+    "\n",
+    "            print(f\"[UC] Scope: allowlist={allowlist or 'ALL'}, cat_limit={catalog_limit or 'ALL'}, schema_limit={schema_limit_per_catalog or 'ALL'}\")\n",
+    "            print(f\"[UC] Catalogs to scan: {len(catalogs)} → {catalogs[:5]}{' …' if len(catalogs)>5 else ''}\")\n",
+    "\n",
+    "            total_schemas = total_tables = managed = external = 0\n",
+    "            futures = []\n",
+    "            queued_catalogs = 0\n",
+    "            table_buffer = []  # Buffer for batch writing\n",
+    "\n",
+    "            with ThreadPoolExecutor(max_workers=max_workers) as ex:\n",
+    "                # Queue up all schema-table enumeration tasks\n",
+    "                for cat in catalogs:\n",
+    "                    schemas = self.get_schemas_for_catalog(cat, schema_limit_per_catalog)\n",
+    "                    total_schemas += len(schemas)\n",
+    "                    print(f\"[UC] {cat}: {len(schemas)} schemas (limit={schema_limit_per_catalog or 'ALL'})\")\n",
+    "                    \n",
+    "                    # Capture schema data\n",
+    "                    for s in schemas:\n",
+    "                        raw_data[\"schemas\"].append({\n",
+    "                            \"catalog_name\": cat,\n",
+    "                            \"schema_name\": s,\n",
+    "                            \"full_name\": f\"{cat}.{s}\"\n",
+    "                        })\n",
+    "                        # Queue table enumeration with full data\n",
+    "                        futures.append(ex.submit(self.list_tables_for_schema_with_data, cat, s))\n",
+    "                        time.sleep(0.002)  # Small delay to avoid overwhelming the API\n",
+    "                    \n",
+    "                    queued_catalogs += 1\n",
+    "                    if queued_catalogs % 5 == 0:\n",
+    "                        print(f\"[UC] Heartbeat: queued {queued_catalogs}/{len(catalogs)} catalogs\")\n",
+    "\n",
+    "                # Process results as they complete\n",
+    "                for i, f in enumerate(as_completed(futures), 1):\n",
+    "                    table_data = f.result()\n",
+    "                    \n",
+    "                    if table_data:\n",
+    "                        # Add to buffer instead of directly to raw_data\n",
+    "                        table_buffer.extend(table_data)\n",
+    "                        \n",
+    "                        # Count stats\n",
+    "                        for tbl in table_data:\n",
+    "                            total_tables += 1\n",
+    "                            if tbl.get(\"table_type\") == \"MANAGED\":\n",
+    "                                managed += 1\n",
+    "                            elif tbl.get(\"table_type\") == \"EXTERNAL\":\n",
+    "                                external += 1\n",
+    "                        \n",
+    "                        # Write batch when buffer reaches threshold\n",
+    "                        if len(table_buffer) >= batch_size and write_callback:\n",
+    "                            print(f\"[UC] Writing batch of {len(table_buffer)} tables to Delta (total so far: {total_tables})...\")\n",
+    "                            write_callback(\"databricks_table\", table_buffer)\n",
+    "                            table_buffer = []  # Clear buffer after write\n",
+    "                    \n",
+    "                    if i % 200 == 0:\n",
+    "                        print(f\"[UC] Heartbeat: processed {i} schema-table batches (tables so far={total_tables})\")\n",
+    "                \n",
+    "                # Write remaining tables in buffer\n",
+    "                if table_buffer and write_callback:\n",
+    "                    print(f\"[UC] Writing final batch of {len(table_buffer)} tables to Delta...\")\n",
+    "                    write_callback(\"databricks_table\", table_buffer)\n",
+    "                    table_buffer = []\n",
+    "\n",
+    "            out[\"uc_schemas\"] = total_schemas\n",
+    "            out[\"uc_tables\"] = total_tables\n",
+    "            out[\"managed_tables\"] = managed\n",
+    "            out[\"external_tables\"] = external\n",
+    "\n",
+    "            # Build scope description\n",
+    "            scope = []\n",
+    "            if allowlist: \n",
+    "                scope.append(f\"allow={allowlist}\")\n",
+    "            if catalog_limit: \n",
+    "                scope.append(f\"cat_limit={catalog_limit}\")\n",
+    "            if schema_limit_per_catalog: \n",
+    "                scope.append(f\"schema_limit={schema_limit_per_catalog}\")\n",
+    "            desc = \", \".join(scope) if scope else \"full-scan\"\n",
+    "            \n",
+    "            # For backward compatibility, only return table data if no callback was used\n",
+    "            if not write_callback and table_buffer:\n",
+    "                raw_data[\"tables\"] = table_buffer\n",
+    "            \n",
+    "            print(f\"[UC] Done ({desc}) → {out['uc_catalogs']} catalogs, {out['uc_schemas']} schemas, {out['uc_tables']} tables\")\n",
+    "            if write_callback:\n",
+    "                print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, tables written in batches\")\n",
+    "            else:\n",
+    "                print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, {len(raw_data['tables'])} table records\")\n",
     "            return out, raw_data\n",
-    "            \n",
-    "        out[\"uc_catalogs\"] = len(catalogs)\n",
-    "\n",
-    "        print(f\"[UC] Scope: allowlist={allowlist or 'ALL'}, cat_limit={catalog_limit or 'ALL'}, schema_limit={schema_limit_per_catalog or 'ALL'}\")\n",
-    "        print(f\"[UC] Catalogs to scan: {len(catalogs)} → {catalogs[:5]}{' …' if len(catalogs)>5 else ''}\")\n",
-    "\n",
-    "        total_schemas = total_tables = managed = external = 0\n",
-    "        futures = []\n",
-    "        queued_catalogs = 0\n",
-    "        table_buffer = []  # Buffer for batch writing\n",
-    "\n",
-    "        with ThreadPoolExecutor(max_workers=max_workers) as ex:\n",
-    "            # Queue up all schema-table enumeration tasks\n",
-    "            for cat in catalogs:\n",
-    "                schemas = self.get_schemas_for_catalog(cat, schema_limit_per_catalog)\n",
-    "                total_schemas += len(schemas)\n",
-    "                print(f\"[UC] {cat}: {len(schemas)} schemas (limit={schema_limit_per_catalog or 'ALL'})\")\n",
-    "                \n",
-    "                # Capture schema data\n",
-    "                for s in schemas:\n",
-    "                    raw_data[\"schemas\"].append({\n",
-    "                        \"catalog_name\": cat,\n",
-    "                        \"schema_name\": s,\n",
-    "                        \"full_name\": f\"{cat}.{s}\"\n",
-    "                    })\n",
-    "                    # Queue table enumeration with full data\n",
-    "                    futures.append(ex.submit(self.list_tables_for_schema_with_data, cat, s))\n",
-    "                    time.sleep(0.002)  # Small delay to avoid overwhelming the API\n",
-    "                \n",
-    "                queued_catalogs += 1\n",
-    "                if queued_catalogs % 5 == 0:\n",
-    "                    print(f\"[UC] Heartbeat: queued {queued_catalogs}/{len(catalogs)} catalogs\")\n",
-    "\n",
-    "            # Process results as they complete\n",
-    "            for i, f in enumerate(as_completed(futures), 1):\n",
-    "                table_data = f.result()\n",
-    "                \n",
-    "                if table_data:\n",
-    "                    # Add to buffer instead of directly to raw_data\n",
-    "                    table_buffer.extend(table_data)\n",
-    "                    \n",
-    "                    # Count stats\n",
-    "                    for tbl in table_data:\n",
-    "                        total_tables += 1\n",
-    "                        if tbl.get(\"table_type\") == \"MANAGED\":\n",
-    "                            managed += 1\n",
-    "                        elif tbl.get(\"table_type\") == \"EXTERNAL\":\n",
-    "                            external += 1\n",
-    "                    \n",
-    "                    # Write batch when buffer reaches threshold\n",
-    "                    if len(table_buffer) >= batch_size and write_callback:\n",
-    "                        print(f\"[UC] Writing batch of {len(table_buffer)} tables to Delta (total so far: {total_tables})...\")\n",
-    "                        write_callback(\"databricks_table\", table_buffer)\n",
-    "                        table_buffer = []  # Clear buffer after write\n",
-    "                \n",
-    "                if i % 200 == 0:\n",
-    "                    print(f\"[UC] Heartbeat: processed {i} schema-table batches (tables so far={total_tables})\")\n",
-    "            \n",
-    "            # Write remaining tables in buffer\n",
-    "            if table_buffer and write_callback:\n",
-    "                print(f\"[UC] Writing final batch of {len(table_buffer)} tables to Delta...\")\n",
-    "                write_callback(\"databricks_table\", table_buffer)\n",
-    "                table_buffer = []\n",
-    "\n",
-    "        out[\"uc_schemas\"] = total_schemas\n",
-    "        out[\"uc_tables\"] = total_tables\n",
-    "        out[\"managed_tables\"] = managed\n",
-    "        out[\"external_tables\"] = external\n",
-    "\n",
-    "        # Build scope description\n",
-    "        scope = []\n",
-    "        if allowlist: \n",
-    "            scope.append(f\"allow={allowlist}\")\n",
-    "        if catalog_limit: \n",
-    "            scope.append(f\"cat_limit={catalog_limit}\")\n",
-    "        if schema_limit_per_catalog: \n",
-    "            scope.append(f\"schema_limit={schema_limit_per_catalog}\")\n",
-    "        desc = \", \".join(scope) if scope else \"full-scan\"\n",
     "        \n",
-    "        # For backward compatibility, only return table data if no callback was used\n",
-    "        if not write_callback and table_buffer:\n",
-    "            raw_data[\"tables\"] = table_buffer\n",
-    "        \n",
-    "        print(f\"[UC] Done ({desc}) → {out['uc_catalogs']} catalogs, {out['uc_schemas']} schemas, {out['uc_tables']} tables\")\n",
-    "        if write_callback:\n",
-    "            print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, tables written in batches\")\n",
-    "        else:\n",
-    "            print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, {len(raw_data['tables'])} table records\")\n",
-    "        return out, raw_data\n"
+    "        finally:\n",
+    "            # Stop keep-alive thread\n",
+    "            if spark and keep_alive_thread:\n",
+    "                stop_keep_alive.set()\n",
+    "                keep_alive_thread.join(timeout=5)\n",
+    "                print(\"[UC] Spark keep-alive thread stopped\")\n"
    ]
   },
   {
@@ -338,7 +381,8 @@
     "    schema_limit_per_catalog: int = UC_SCHEMA_LIMIT_PER_CATALOG,\n",
     "    max_workers: int = UC_MAX_WORKERS,\n",
     "    write_callback = None,\n",
-    "    batch_size: int = 5000\n",
+    "    batch_size: int = 5000,\n",
+    "    spark = None\n",
     ") -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
     "    \"\"\"\n",
     "    Wrapper for Unity Catalog enumeration.\n",
@@ -346,6 +390,7 @@
     "    Args:\n",
     "        write_callback: Optional function(table_type, records) to write batches periodically\n",
     "        batch_size: Write every N tables (only used if write_callback is provided)\n",
+    "        spark: SparkSession to keep alive during long enumeration\n",
     "    \n",
     "    Returns tuple of (counts, raw_data):\n",
     "    - counts: dict with catalog/schema/table counts\n",
@@ -359,7 +404,8 @@
     "        schema_limit_per_catalog=schema_limit_per_catalog,\n",
     "        max_workers=max_workers,\n",
     "        write_callback=write_callback,\n",
-    "        batch_size=batch_size\n",
+    "        batch_size=batch_size,\n",
+    "        spark=spark\n",
     "    )"
    ]
   }
