--- a/config.ipynb
+++ b/config.ipynb
@@ -208,7 +208,10 @@
     "UC_MAX_WORKERS = 20\n",
     "\n",
     "# ---- UC batch writing (memory optimization) ----\n",
-    "UC_TABLE_BATCH_SIZE = 5000            # Write tables every N records (reduces memory usage)"
+    "UC_TABLE_BATCH_SIZE = 5000            # Write tables every N records (reduces memory usage)\n",
+    "\n",
+    "# ---- Spark session keep-alive (prevents timeout during long operations) ----\n",
+    "SPARK_KEEP_ALIVE_INTERVAL = 60        # Seconds between keep-alive pings (default: 60)"
    ]
   },
   {
