Remove unused SPARK_KEEP_ALIVE_INTERVAL config variable
- Keep-alive interval is hardcoded to 60 seconds in unity_catalog.ipynb
- Removing config variable to avoid confusion since it wasn't being used

--- a/config.ipynb
+++ b/config.ipynb
@@ -208,10 +208,7 @@
     "UC_MAX_WORKERS = 20\n",
     "\n",
     "# ---- UC batch writing (memory optimization) ----\n",
-    "UC_TABLE_BATCH_SIZE = 5000            # Write tables every N records (reduces memory usage)\n",
-    "\n",
-    "# ---- Spark session keep-alive (prevents timeout during long operations) ----\n",
-    "SPARK_KEEP_ALIVE_INTERVAL = 60        # Seconds between keep-alive pings (default: 60)"
+    "UC_TABLE_BATCH_SIZE = 5000            # Write tables every N records (reduces memory usage)"
    ]
   },
   {
